Add cookbook, 21cm tutorial

--- a/hlp/homepage.html
+++ b/hlp/homepage.html
@@ -33,6 +33,8 @@ This documentation server gives access to:
 <UL>
 <LI><A HREF=nnews.txt>The latest news on Newstar</A> (<EM>here at nfra</EM>)
 <LI><A HREF=hb_contents/hb_contents.html>The Newstar Documentation Collection</A>
+<LI><A HREF=newstar-cookbook.pdf>The Newstar Cookbook</A> by Jan Noordam (editor)
+<LI><A HREF=newstar-verheijen.pdf>How to calibrate, flag and transform 21cm line data from the WSRT using NEWSTAR</A> by Marc Verheijen
 </UL>
 
 <HR>
