Add link to source code

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@ This documentation server gives access to:
 <LI><A HREF=newstar-verheijen.pdf>How to calibrate, flag and transform 21cm line data from the WSRT using NEWSTAR</A> by Marc Verheijen
 </UL>
 
+<P>
+The Newstar is currently hosted at <a href=https://github.com/tammojan/Newstar>https://github.com/tammojan/Newstar</a>
+
 <HR>
 <!-- <ADDRESS><A HREF=people/people.html>The Newstar projectgroup</A></ADDRESS> -->
 </BODY>
