Change repo address to lofar-astron

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ This documentation server gives access to:
 </UL>
 
 <P>
-The Newstar is currently hosted at <a href=https://github.com/tammojan/Newstar>https://github.com/tammojan/Newstar</a>
+The Newstar is currently hosted at <a href=https://github.com/lofar-astron/Newstar>https://github.com/lofar-astron/Newstar</a>
 
 <HR>
 <!-- <ADDRESS><A HREF=people/people.html>The Newstar projectgroup</A></ADDRESS> -->
